# femto8-nextp8

./: EDITOR.md  Makefile  Makefile.linux  Makefile.linux.post  Makefile.mac  Makefile.nextp8  Makefile.nextp8.post  Makefile.windows  README.md  build_windows.sh
carts/: coroutine.p8  p8scii.p8  pcmtest.p8  snake.p8  tb_p8audio_api.p8  welcome.p8
data/: convert_font.py  create_p8_symbols.py  generate_nextp8_keymap.py  mkeyboard_scancodes.py  p8scii.json  p8scii_keymap.py  ps2_scancodes.py  spectrum_keymap.py  usb_hid_scancodes.py
src/: main.c  p8_audio.c  p8_audio.h  p8_bbs.c  p8_bbs.h  p8_browse.c  p8_browse.h  p8_cache.c  p8_cache.h  p8_compat.c  p8_cstore.c  p8_cstore.h  p8_dialog.c  p8_dialog.h  p8_dsp.c  p8_editor.c  p8_editor.h  p8_editor_code.c  p8_editor_code.h  p8_editor_map.c  p8_editor_map.h  p8_editor_music.c  p8_editor_music.h  p8_editor_sfx.c  p8_editor_sfx.h  p8_editor_sprite.c  p8_editor_sprite.h  p8_editor_syntax.c  p8_editor_syntax.h  p8_editor_tab.h  p8_editor_undo.c  p8_editor_undo.h  p8_emu.c  p8_emu.h  p8_http.c  p8_http.h  p8_input.c  p8_input.h  p8_lua.c  p8_lua.h  (+23 more)
src/data/: lua_api.h  pico_font.h
src/lua/: llex.c  llex.h  lparser.c  lpico8lib.c  lvm.c
src/wifi/: p8_wifi.c  p8_wifi.h  p8_wifi_config.c  p8_wifi_config.h
tests/automatic/: lua_api_tests.p8  p8scii.p8  registers.p8  test_7x7_pixels.p8  test_consume_parse.p8  test_env_funcs.p8  test_fwk.lua  test_inext.p8  test_load.p8  test_sget_oob.p8  test_sincos.p8  test_table_ops.p8
tests/interactive/: CMUSIC.p8  clock.p8  mousetest2.p8  test_menuitem.p8  (+5 more)
tools/: p8_compat_check.c  p8scii_decode.py  png_to_p8.c
unittests/: CMakeLists.txt
unittests/editor/code/: CMakeLists.txt  p8_editor_code_test.c  p8_editor_code_test_common.h  p8_editor_code_test_helpers.h  test_basic.c  test_edit.c  test_undo.c
(+30 files in other folders)
